fixed css for print

--- a/en/ichigojamlist.css
+++ b/en/ichigojamlist.css
@@ -1,6 +1,6 @@
 body {
 	font-size: 90%;
-	font-family: 游ゴシック体, 'Yu Gothic', YuGothic, 'ヒラギノ角ゴシック Pro', 'Hiragino Kaku Gothic Pro', メイリオ, Meiryo, Osaka, 'ＭＳ Ｐゴシック', 'MS PGothic', sans-serif;
+	font-family: sans-serif;
 }
 h1 {
 	margin: 0;
