--- a/ja/ichigojamprint.css
+++ b/ja/ichigojamprint.css
@@ -15,7 +15,7 @@ body {
 	font-size: 16px;
 	line-height: 1.3em;
 	letter-spacing: 0px;
-	padding: 2px 4px;
+	padding: 4px 4px 2px 4px;
 	margin: 4px 0px;
 	word-break: break-all;
 }
