--- a/ja/ichigojamlist.css
+++ b/ja/ichigojamlist.css
@@ -28,12 +28,19 @@ section {
 	white-space: pre-wrap;
 	background: #000;
 	color: white;
-	padding: .5em 1em;
-	margin: 10px 0em;
+	padding: .3em .8em;
+	margin: .4em 0em;
 	line-height: 1.3em;
 	letter-spacing: 0px;
 	font-size: 85%;
-	width: 590px;
+	width: 95%; /*590px;*/
 	word-break: break-all;
 	x-overflow: scroll;
+}
+@media print {
+	.ichigojam {
+		background: white;
+		color: black;
+		outline: 2px solid black;
+	}
 }
